[] fix slideout overflow + eof/empty feed notification

--- a/public/css/slideoutjs.css
+++ b/public/css/slideoutjs.css
@@ -1,22 +1,21 @@
 .slideout-menu {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 0;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  display: none;
-  
-  /* Custom */
-  background-color: #1D1F20;
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	z-index: 0;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+	display: none;
+
+	/* Custom */
+	background-color: #1D1F20;
 }
 
 .slideout-panel {
-  position:relative;
-  z-index: 1;
-
+	position:relative;
+	z-index: 3;
     /* Custom */
 	background-color: #fff;
 }
@@ -24,9 +23,9 @@
 .slideout-open,
 .slideout-open body,
 .slideout-open .slideout-panel {
-  /* overflow: hidden; */
+	/* overflow: hidden; */
 }
 
 .slideout-open .slideout-menu {
-  display: block;
+	display: block;
 }
